--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<ol>
+		
+		<li data-ns-test="shoppingList">Beautiful House</li>
+		<li data-ns-test="shoppingList">Jewellery to Mom</li>
+		<li data-ns-test="shoppingList">Bullet To My Dad</li>
+		
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Japan</li>
+		<li data-ns-test="holidayList">Kerala</li>
+		<li data-ns-test="holidayList">Pondicherry</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
